--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.0"
+    "react-native": "0.59.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
