--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "GitHubTrending": "^3.1.1",
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-gesture-handler": "^1.3.0",
