--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "GitHubTrending": "^3.1.1",
     "react": "16.8.3",
     "react-native": "0.59.0",
+    "react-native-event-bus": "^1.0.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
+    "react-navigation-redux-helpers": "^3.0.2",
+    "react-navigation-tabs": "^2.2.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
