--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "GitHubTrending": "^3.1.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-event-bus": "^1.0.0",
