--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.59.0",
     "react-native-event-bus": "^1.0.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-htmlview": "^0.14.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
