add trending, webview, welcome pages

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-webview')
+    implementation project(':react-native-splash-screen')
     implementation project(':react-native-reanimated')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
