--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.0",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-event-bus": "^1.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-htmlview": "^0.14.0",
     "react-native-reanimated": "^1.1.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^5.12.1",
     "react-navigation": "^3.11.1",
     "react-navigation-redux-helpers": "^3.0.2",
     "react-navigation-tabs": "^2.2.0",
