--- a/ios/react_native_demo_github_app/Info.plist
+++ b/ios/react_native_demo_github_app/Info.plist
@@ -72,5 +72,7 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+	<key>CodePushDeploymentKey</key>
+	<string>deployment-key-here</string>
 </dict>
 </plist>
