--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.0",
+    "react-native-check-box": "^2.1.7",
+    "react-native-code-push": "^5.6.0",
     "react-native-easy-toast": "^1.2.0",
     "react-native-event-bus": "^1.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-htmlview": "^0.14.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.1.0",
+    "react-native-sortable-listview": "^0.2.8",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^5.12.1",
